--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
 
-<p><img src="/Fastpages/images/download.png" alt="" title="https://github.com/fastai/fastpages" />
-&lt;img src=”https://github.com/BuddaBaker/Fastpages/blob/master/images/download.png”
-<a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
+<p><img src="/Fastpages/images/download.png" alt="" title="https://github.com/fastai/fastpages" /></p>
+
+<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
 
 <p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
 
