--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@ This site is built with [fastpages](https://github.com/fastai/fastpages), An eas
 
 You can edit the `index.html` file to change this content.
 <img src="download.png" >
+<body>
+    background-color=#F7CAC9;
+</body>
 
 # Posts
 
