--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@ This site is built with [fastpages](https://github.com/fastai/fastpages), An eas
 
 You can edit the `index.html` file to change this content.
 <img src="download.png" >
-<body>
-    background-color=#F7CAC9;
-</body>
+<body style="background-color:#b62623"></body>
 
 # Posts
 
