--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ window.onload = wrap_img;
 
 <p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.
 <img src="download.png" /></p>
+<body style="background-color:#b62623"></body>
 
 <h1 id="posts">Posts</h1>
 
