--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ This site is built with [fastpages](https://github.com/fastai/fastpages), An eas
 [fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
 
 You can edit the `index.html` file to change this content.
-<img src="download.png" >
+<img src="https://imageio.forbes.com/blogs-images/forbestechcouncil/files/2019/01/canva-photo-editor-8-7.jpg?format=jpg&width=960" >
 <body style="background-color:#b62623"></body>
 
 # Posts
