deploy: e1fef57076fad59c8fd8c514673285363914bb7d

--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@ window.onload = wrap_img;
 
 <p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
 
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.
-<img src="https://imageio.forbes.com/blogs-images/forbestechcouncil/files/2019/01/canva-photo-editor-8-7.jpg?format=jpg&amp;width=960" /></p>
-<body style="background-color:#b62623"></body>
+<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+
+<body style="background-color:#b62623">
+</body>
+
+<body><img src="https://imageio.forbes.com/blogs-images/forbestechcouncil/files/2019/01/canva-photo-editor-8-7.jpg?format=jpg&amp;width=960" /></body>
 
 <h1 id="posts">Posts</h1>
 
