deploy: 8a71266bc1fdf4052f9e2b3f6b1c8195061bde6a

--- a/about/index.html
+++ b/about/index.html
@@ -80,7 +80,7 @@ window.onload = wrap_img;
 
 <p>Programmer who loves to expirement with new things. I am a big NFL and NBA fan but especially I am a fan of the Philadelphia Eagles. My favorite player is Malcolm Jenkins</p>
 
-<p><img src="" /></p>
+<body><img src="https://cdn.profootballrumors.com/files/2016/02/USATSI_8776321.jpg" /></body>
 
   </div>
 
