--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@ window.onload = wrap_img;
 
 <p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
 
-<body style="background-color:#b62623">
-</body>
+<p>&lt;/body&gt;</p>
 
 <body><img src="https://imageio.forbes.com/blogs-images/forbestechcouncil/files/2019/01/canva-photo-editor-8-7.jpg?format=jpg&amp;width=960" /></body>
 
