deploy: 1c6c7182facd335d84f57ad0a14a0d7aa4438538

--- a/vocab/index.html
+++ b/vocab/index.html
@@ -84,6 +84,52 @@ window.onload = wrap_img;
   <li>variables: Sets of numbers/strings that change depending on the function its passed through</li>
 </ul>
 
+<html>
+<style>
+table, th, td {
+  border:1px solid black;
+}
+</style>
+<body>
+
+<h2>Table of Everything Learned</h2>
+
+<table style="width:100%">
+  <tr>
+    <th>Week</th>
+    <th>Term</th>
+    <th>Defintion</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>print</td>
+    <td>print is a way to display messages through python</td>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>if else statement</td>
+    <td>Check if one condition is true, if its not true then do the other code</td>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>variables</td>
+    <td>Check if one condition is true, if its not true then do the other code</td>
+  </tr>
+   <tr>
+    <td>2</td>
+    <td>lists</td>
+    <td>A sequence of elements that can be edited and called</td>
+  </tr>
+   <tr>
+    <td>2</td>
+    <td>Dictionary</td>
+    <td>A data structure with a key and value which can be edited and called</td>
+  </tr>
+</table>
+
+
+</body>
+</html>
 
   </div>
 
