--- a/vocab/index.html
+++ b/vocab/index.html
@@ -84,7 +84,7 @@ table, th, td {
 </style>
 <body>
 
-<h2>Table of Everything Learned Till Week</h2>
+<h2>Vocab Table so far</h2>
 
 <table style="width:100%">
   <tr>
