--- a/binary.html
+++ b/binary.html
@@ -91,6 +91,7 @@ window.onload = wrap_img;
                 <th>Octal</th>
                 <th>Hexadecimal</th>
                 <th>Decimal</th>
+                <th>Base 30</th>
                 <th>Minus</th>
             </tr>
             <tr>
@@ -99,6 +100,7 @@ window.onload = wrap_img;
                 <td id="octal">0</td>
                 <td id="hexadecimal">0</td>
                 <td id="decimal">0</td>
+                <td id="base">0</td>
                 <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
             </tr>
             </table>
@@ -292,6 +294,7 @@ function setConversions(binary) {
     document.getElementById('hexadecimal').innerHTML = parseInt(binary, 2).toString(16);
     // Decimal conversion
     document.getElementById('decimal').innerHTML = parseInt(binary, 2).toString();
+    document.getElementById('base').innerHTML = parseInt(binary, 2).toString(30)
 }
 //
 function decimal_2_base(decimal, base) {
