deploy: 6cbd0ec1814c954618345efbfa2a88923805ac9b

--- a/binary.html
+++ b/binary.html
@@ -65,7 +65,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/Fastpages/vocab/">Vocab Page</a><a class="page-link" href="/Fastpages/about/">About Me</a><a class="page-link" href="/Fastpages/JSTable/">JSTable</a><a class="page-link" href="/Fastpages/search/">Search</a><a class="page-link" href="/Fastpages/submenu/">Submenu</a><a class="page-link" href="/Fastpages/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/Fastpages/vocab/">Vocab Page</a><a class="page-link" href="/Fastpages/about/">About Me</a><a class="page-link" href="/Fastpages/JSTable/">JSTable</a><a class="page-link" href="/Fastpages/search/">Search</a><a class="page-link" href="/Fastpages/submenu/">Submenu</a><a class="page-link" href="/Fastpages/categories/">Tags</a><a class="page-link" href="/Fastpages/binary">Binary Math</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -274,7 +274,7 @@ const IMAGE_ON = "https://cdn.pixabay.com/photo/2019/09/29/22/06/light-bulb-4514
 const MSG_OFF = "Turn off";
 const IMAGE_OFF = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1KKiw37bo5x7M3Kf1j-BK4m4yKEGym3H9gQ&usqp=CAU"
 
-let RGB = Math.floor(Math.random()*16777215).toString(16); 
+let RGB = Math.floor(Math.random()).toString(16); 
 document.getElementById("color-code").style.backgroundColor = RGB;
 
 // return string with current value of each bit
