--- a/homework/index.html
+++ b/homework/index.html
@@ -233,7 +233,7 @@ window.onload = wrap_img;
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">quiz</span><span class="p">():</span>
     <span class="n">points</span> <span class="o">=</span> <span class="mi">0</span>
-    <span class="n">questions</span> <span class="o">=</span> <span class="p">[</span><span class="s2">"How do you remove"</span><span class="p">,</span> <span class="s2">"How do you add"</span><span class="p">,</span> <span class="s2">"How do you insert"</span><span class="p">,</span> <span class="s2">"How do you call an index"</span><span class="p">,</span><span class="s2">"How do you have a variable equal to a part of the list?"</span><span class="p">]</span>
+    <span class="n">questions</span> <span class="o">=</span> <span class="p">[</span><span class="s2">"How do you remove an element from a list"</span><span class="p">,</span> <span class="s2">"How do you add to a list"</span><span class="p">,</span> <span class="s2">"How do you insert an element into a list"</span><span class="p">,</span> <span class="s2">"How do you call an index"</span><span class="p">,</span><span class="s2">"How do you have a variable equal to a part of the list?"</span><span class="p">]</span>
     <span class="n">answers</span> <span class="o">=</span> <span class="p">[</span><span class="s2">"list.remove"</span><span class="p">,</span> <span class="s2">"list.append"</span><span class="p">,</span> <span class="s2">"list.insert"</span><span class="p">,</span> <span class="s2">"list[i]"</span><span class="p">,</span> <span class="s2">"x = list[i]"</span><span class="p">]</span>
     <span class="n">num</span> <span class="o">=</span> <span class="mi">0</span>
     <span class="k">while</span> <span class="n">num</span> <span class="o">&lt;=</span> <span class="mi">4</span><span class="p">:</span>
@@ -262,8 +262,8 @@ window.onload = wrap_img;
 <pre>Correct
 Correct
 Correct
-Correct
 Incorrect
+Correct
 You got: 80.0 %
 </pre>
 </div>
