deploy: d80077071bb4d042c743ffbdc258205ec63a8338

--- a/homework/index.html
+++ b/homework/index.html
@@ -153,8 +153,6 @@ window.onload = wrap_img;
 <li>Lists can be used to store data</li>
 <li>Indexes count an organize data in a list</li>
 <li>Iteration is repeating a function multiple times </li>
-<li>A condition is telling when a system should stop running</li>
-<li>You can use a for loop for element in list</li>
 </ul>
 <p>Fill out the empty boxes:</p>
 <table>
@@ -214,6 +212,11 @@ window.onload = wrap_img;
 <a class="anchor" href="#Overview-and-Notes:--3.8---Iteration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview and Notes:  3.8 - Iteration<a class="anchor-link" href="#Overview-and-Notes:--3.8---Iteration"> </a>
 </h2>
 <p>Add your <mark>OWN</mark> Notes for 3.8 here:</p>
+<ul>
+<li>A condition is telling when a system should stop running</li>
+<li>You can use a for loop for element in list</li>
+<li>You can use the list functions to manupulate the list items</li>
+</ul>
 
 </div>
 </div>
