--- a/homework1718.html
+++ b/homework1718.html
@@ -369,7 +369,7 @@ Fully programmed solution will improve your grade, at a minimum show that you tr
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/Fastpages/feed.xml">
+          <a href="https://buddabaker.github.io/Fastpages/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/Fastpages/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
