--- a/submenu/index.html
+++ b/submenu/index.html
@@ -106,7 +106,7 @@ table, th, td {
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/Fastpages/feed.xml">
+          <a href="https://buddabaker.github.io/Fastpages/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/Fastpages/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
